# exclemcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: mcp-config-examples.md
src/: excel_mcp_server.py
tests/: test_excel_mcp_server.py
