[project]
name = "excel-mcp"
version = "0.1.0"
description = "MCP server for reading and editing Excel files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "openpyxl>=3.1.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
excel-mcp = "excel_mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["excel_mcp_server"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
